# pypi-template

./: .env.template  Makefile  README.md  bandit.yml  pyproject.toml  setup.py
.github/workflows/: default.yml  release.yml
examples/: README.md
teenytiny/transform/: text.py
tests/: test_dummy.py
tests/transform/: test_text.py
utils/: version.py
